# powerfs

./: .cnb.yml  .gitignore  .gitmodules  Cargo.toml  README.md  advanced-storage-features.md  design.md  ecplan.md  s3-design.md  s3tests.conf
.github/workflows/: ci-cd.yml  rust.yml
.trae/skills/powerfs-troubleshooting/: SKILL.md
docker/: Dockerfile  docker-compose.yml  nginx.conf
docker/scripts/: health-check.sh  start-cluster.sh  stop-cluster.sh
kernel/powerfs_mod/: .modules.order.cmd  .powerfs.ko.cmd  .powerfs.mod.cmd  .powerfs.mod.o.cmd  .powerfs.o.cmd  .powerfs_fs.o.cmd  .powerfs_mod.o.cmd  .powerfs_transport.o.cmd  Makefile  modules.order  powerfs.h  powerfs.ko  powerfs.mod  powerfs.mod.c  powerfs_fs.c  powerfs_mod.c  powerfs_transport.c
powerfs-cli/src/: kv_client.rs  main.rs
powerfs-cli/src/commands/: assign.rs  kv.rs  mod.rs
powerfs-common/: Cargo.toml
powerfs-common/src/: event.rs  lib.rs  types.rs  utils.rs
powerfs-common/src/storage/: rocksdb.rs
powerfs-common/tests/: error_test.rs  types_test.rs  utils_test.rs
powerfs-core/: Cargo.toml
powerfs-core/src/: bitrot_scanner.rs  ec_thread.rs  gc_thread.rs  index.rs  kv_cache.rs  kv_cache_persist.rs  lib.rs  needle.rs  repair_thread.rs  storage.rs  volume.rs
powerfs-core/src/benchmark/: mod.rs  storage.rs
powerfs-core/tests/: ec_test.rs  index_test.rs  kv_cache_test.rs  needle_test.rs  storage_manager_test.rs  volume_test.rs
powerfs-fuse/: Cargo.toml
powerfs-fuse/benches/: fs_bench.rs
powerfs-fuse/src/: cache.rs  client.rs  fuse.rs  fuser_fs.rs  main.rs  posix_projection.rs
powerfs-fuse/tests/: concurrent_consistency.rs  fs_call_validation_test.rs  posix_tests.rs  test_harness.rs
powerfs-kernel/: Cargo.toml
powerfs-kernel/src/: lib.rs  netlink.rs  protocol.rs
powerfs-master/: Cargo.toml  build.rs
powerfs-master/proto/: master.proto
powerfs-master/src/: directory_tree.rs  kv_cache_service.rs  lib.rs  master.rs  metadata_manager.rs  proto.rs  server.rs  volume_client.rs
powerfs-master/src/s3/: directory_tree_api.rs  mod.rs  server.rs
powerfs-master/src/volume_proto/: mod.rs  powerfs.rs
powerfs-master/tests/: cluster.rs  e2e_test.rs  filer_api_test.rs  raft_integration_test.rs
powerfs-monitor/: Cargo.toml
powerfs-monitor-frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
powerfs-monitor-frontend/src/: App.tsx  index.css
powerfs-monitor-frontend/src/components/Layout/: index.tsx
powerfs-monitor-frontend/src/pages/Alerts/: index.tsx
powerfs-monitor-frontend/src/pages/Dashboard/: index.tsx
powerfs-monitor-frontend/src/pages/Fuse/: index.tsx
powerfs-monitor-frontend/src/pages/KV/: index.tsx
powerfs-monitor-frontend/src/pages/Nodes/: index.tsx
powerfs-monitor-frontend/src/pages/Optimizations/: index.tsx
powerfs-monitor-frontend/src/pages/S3/: index.tsx
powerfs-monitor-frontend/src/pages/Volumes/: index.tsx
powerfs-monitor-frontend/src/services/: api.ts  websocket.ts
powerfs-monitor-frontend/src/types/: index.ts
powerfs-monitor-frontend/src/utils/: format.ts  mockData.ts
powerfs-monitor/src/: alert_engine.rs  event.rs  event_bus.rs  lib.rs  main.rs  metric_store.rs
powerfs-monitor/src/api/: optimizations.rs
powerfs-server/: Cargo.toml
powerfs-server/src/: main.rs
powerfs-volume/: Cargo.toml
powerfs-volume/proto/: powerfs.proto
powerfs-volume/src/: proto.rs  server.rs
powerfs-volume/tests/: grpc_test.rs
