[package]
name = "powerfs-common"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
raft = { workspace = true }
rocksdb = { workspace = true }
rand = { workspace = true }
toml = "0.8"
redis = { version = "0.24", features = ["tokio-comp"] }
sysinfo = "0.30"
crc32c = "0.6"
crc64fast = "1.1"

[dev-dependencies]
tempfile = "3.10"
