[package]
name = "powerfs-fuse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "powerfs-fuse"
path = "src/main.rs"

[[bench]]
name = "fs_bench"
path = "benches/fs_bench.rs"
harness = false

[dependencies]
powerfs-common = { path = "../powerfs-common" }
powerfs-core = { path = "../powerfs-core" }
powerfs-master = { path = "../powerfs-master" }
powerfs-volume = { path = "../powerfs-volume" }
powerfs-orset = { path = "../powerfs-orset" }
fuse-backend-rs = { workspace = true }
fuser = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
lru = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
num_cpus = "1.16"
uuid = { workspace = true }
tokio-util = "0.7"
tokio-stream = "0.1"
md5 = "0.7"
hostname = "0.3"

[dev-dependencies]
rfs_tester = { path = "../rfs_tester" }
