[package]
name = "powerfs-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "powerfs-monitor"
path = "src/main.rs"

[dependencies]
powerfs-common = { path = "../powerfs-common" }
powerfs-core = { path = "../powerfs-core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { version = "0.6", features = ["ws", "json"] }
redis = { version = "0.22", features = ["tokio-comp"] }
tower-http = { version = "0.4", features = ["cors"] }
futures = { workspace = true }
futures-util = { version = "0.3" }
clap = { workspace = true }
env_logger = { workspace = true }