[package]
name = "powerfs-volume"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "powerfs-volume"
path = "src/main.rs"

[build-dependencies]
tonic-build = { version = "0.11" }

[dependencies]
chrono = { workspace = true }
powerfs-common = { path = "../powerfs-common" }
powerfs-core = { path = "../powerfs-core" }
powerfs-master = { path = "../powerfs-master" }
tokio = { workspace = true, features = ["time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tempfile = "3"
tonic = { workspace = true }
prost = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
redis = { version = "0.22", features = ["tokio-comp"] }
sysinfo = "0.30"
